--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,21 @@ networks:
   default:
 
 services:
+  db:
+    networks:
+      default:
+        aliases:
+          - db
+    image: mysql:8.0
+    command: --default-authentication-plugin=mysql_native_password
+    restart: no
+    environment:
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - "3306:3306"
 
   php-min:
     build:
